--- a/Back/package.json
+++ b/Back/package.json
@@ -13,9 +13,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mysql2": "^3.10.2",
-    "nodemon": "^3.1.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
